fix: permission issue when removing

--- a/ros2_ws/Dockerfile
+++ b/ros2_ws/Dockerfile
@@ -92,7 +92,7 @@ WORKDIR ${HOME}
 RUN wget https://raw.githubusercontent.com/aica-technology/.github/v0.9.0/guidelines/.clang-format
 COPY ./config/config.rviz config.rviz
 COPY --chown=${USER}:${USER} ./config/generate_compile_commands.sh /usr/local/bin/generate_compile_commands
-COPY ./config/general_aliases.sh /tmp
+COPY --chown=${USER}:${USER} ./config/general_aliases.sh /tmp
 RUN /bin/bash /tmp/general_aliases.sh
 RUN rm /tmp/general_aliases.sh
 RUN mkdir -p ${COLCON_HOME}
