--- a/ros2_ws/Dockerfile
+++ b/ros2_ws/Dockerfile
@@ -17,6 +17,17 @@ ENV COLCON_WORKSPACE=${ROS2_WORKSPACE}
 
 FROM environment-variables AS base-dependencies
 
+# FIXME: remove after new ros images are released
+RUN rm /etc/apt/sources.list.d/ros2-latest.list \
+  && rm /usr/share/keyrings/ros2-latest-archive-keyring.gpg
+RUN apt-get update \
+  && apt-get install -y ca-certificates curl
+RUN export ROS_APT_SOURCE_VERSION=$(curl -s https://api.github.com/repos/ros-infrastructure/ros-apt-source/releases/latest | grep -F "tag_name" | awk -F\" '{print $4}') ;\
+    curl -L -s -o /tmp/ros2-apt-source.deb "https://github.com/ros-infrastructure/ros-apt-source/releases/download/${ROS_APT_SOURCE_VERSION}/ros2-apt-source_${ROS_APT_SOURCE_VERSION}.$(. /etc/os-release && echo $VERSION_CODENAME)_all.deb" \
+    && apt-get update \
+    && apt-get install /tmp/ros2-apt-source.deb \
+    && rm -f /tmp/ros2-apt-source.deb
+
 # disable suggested and recommended install
 RUN apt-config dump | grep -we Recommends -e Suggests | sed s/1/0/ \
   | sudo tee /etc/apt/apt.conf.d/999norecommend
