--- a/ros2_ws/Dockerfile
+++ b/ros2_ws/Dockerfile
@@ -18,7 +18,6 @@ ENV COLCON_WORKSPACE=${ROS2_WORKSPACE}
 FROM environment-variables AS base-dependencies
 
 # FIXME: remove after new ros images are released
-RUN rm /etc/apt/sources.list.d/ros2-latest.list && rm /usr/share/keyrings/ros2-latest-archive-keyring.gpg
 RUN apt-get update && apt-get install --no-install-recommends -y curl && rm -rf /var/lib/apt/lists/*
 RUN export ROS_APT_SOURCE_VERSION=$(curl -s https://api.github.com/repos/ros-infrastructure/ros-apt-source/releases/latest | grep -F "tag_name" | awk -F\" '{print $4}') ;\
   curl -L -s -o /tmp/ros2-apt-source.deb "https://github.com/ros-infrastructure/ros-apt-source/releases/download/${ROS_APT_SOURCE_VERSION}/ros2-apt-source_${ROS_APT_SOURCE_VERSION}.$(. /etc/os-release && echo $VERSION_CODENAME)_all.deb" \
@@ -114,6 +113,7 @@ WORKDIR ${HOME}
 RUN wget https://raw.githubusercontent.com/aica-technology/.github/v0.9.0/guidelines/.clang-format
 COPY ./config/config.rviz config.rviz
 COPY --chown=${USER}:${USER} ./config/generate_compile_commands.sh /usr/local/bin/generate_compile_commands
+COPY --chown=${USER}:${USER} ./config/camera_calibration.sh /usr/local/bin/camera_calibration
 COPY --chown=${USER}:${USER} ./config/InstallAicaDescriptions.cmake /tmp
 RUN sudo mv /tmp/InstallAicaDescriptions.cmake /usr/share/cmake-$(cmake --version | awk '/cmake version/ {split($3, v, "."); print v[1]"."v[2]}')/Modules
 RUN mkdir -p ${COLCON_HOME}
@@ -167,10 +167,13 @@ RUN git clone -b 1.0.2 --depth 1 https://github.com/PickNikRobotics/cpp_polyfill
 RUN git clone -b 3.1.0 --depth 1 https://github.com/ros-controls/control_toolbox.git
 RUN git clone -b 0.1.0 --depth 1 https://github.com/ros-controls/kinematics_interface.git
 
-WORKDIR ${ROS2_WORKSPACE}
-RUN /bin/bash -c "source /opt/ros/${ROS_DISTRO}/setup.bash; colcon build"
-RUN rm -rf ./src
+RUN git clone --filter=blob:none --no-checkout -b iron https://github.com/ros-perception/image_pipeline.git && \
+  cd image_pipeline && \
+  git sparse-checkout init --no-cone && \
+  echo "camera_calibration/" > .git/info/sparse-checkout && \
+  git checkout && mv camera_calibration .. && cd .. && rm -rf image_pipeline
 
+WORKDIR ${ROS2_WORKSPACE}
 FROM base-workspace AS ros2-control-jazzy
 RUN apt-get update && apt-get install --no-install-recommends -y \
   libcap-dev \
@@ -201,6 +204,12 @@ RUN git clone -b 3.4.0 --depth 1 https://github.com/ros-controls/control_toolbox
 RUN git clone -b 2.1.2 --depth 1 https://github.com/ros/filters.git
 RUN git clone -b 1.2.1 --depth 1 https://github.com/ros-controls/kinematics_interface.git
 
+RUN git clone --filter=blob:none --no-checkout -b jazzy https://github.com/ros-perception/image_pipeline.git && \
+  cd image_pipeline && \
+  git sparse-checkout init --no-cone && \
+  echo "camera_calibration/" > .git/info/sparse-checkout && \
+  git checkout && mv camera_calibration .. && cd .. && rm -rf image_pipeline
+
 WORKDIR ${ROS2_WORKSPACE}
 RUN /bin/bash -c "source /opt/ros/${ROS_DISTRO}/setup.bash; colcon build"
 RUN rm -rf ./src
@@ -211,7 +220,6 @@ FROM environment-variables AS final
 COPY --from=ros2-control / /
 COPY --from=build-go /go/validate_json /usr/bin/
 RUN rm -rf /home/ubuntu
-RUN rm /etc/apt/sources.list.d/ros2-latest.list && rm /usr/share/keyrings/ros2-latest-archive-keyring.gpg
 
 # start as ROS user
 USER ${USER}
