--- a/camera_calibration/Dockerfile
+++ b/camera_calibration/Dockerfile
@@ -5,9 +5,11 @@ ARG VERSION=v0.0.0
 
 FROM ${BASE_IMAGE}:${BASE_TAG} AS environment-variables
 ENV DEBIAN_FRONTEND=noninteractive
-ENV ROS2_WORKSPACE=/ws
-ENV UID=1000
-ENV GID=1000
+ENV PYTHONWARNINGS=ignore:::setuptools.command.install,ignore:::setuptools.command.easy_install,ignore:::pkg_resources
+ENV PIP_NO_CACHE_DIR=1
+ENV USER=ros2
+ENV HOME=/home/${USER}
+ENV ROS2_WORKSPACE=/home/${USER}/ros2_ws
 
 FROM environment-variables AS base-dependencies
 
@@ -28,17 +30,35 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
     ros-${ROS_DISTRO}-cv-bridge \
     && rm -rf /var/lib/apt/lists/*
 RUN apt-get clean
+RUN echo "Set disable_coredump false" >> /etc/sudo.conf
 
-COPY ./config/camera_calibration.sh /usr/local/bin/camera_calibration
+RUN usermod -l ${USER} ubuntu
+RUN groupmod -n ${USER} ubuntu
+RUN usermod -d ${HOME} -m ros2
+RUN chfn -f "ROS2 User" ros2
 
-WORKDIR ${ROS2_WORKSPACE}
-RUN rosdep init
-RUN rosdep update
-RUN /bin/bash -c "source /opt/ros/${ROS_DISTRO}/setup.bash; colcon build --symlink-install"
+RUN usermod -a -G dialout ${USER}
+RUN echo "${USER} ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/99_aptget
+RUN chmod 0440 /etc/sudoers.d/99_aptget && chown root:root /etc/sudoers.d/99_aptget
+
 COPY ./config/sshd_entrypoint.sh /sshd_entrypoint.sh
 RUN chmod 744 /sshd_entrypoint.sh
 
-WORKDIR ${ROS2_WORKSPACE}/src
+USER ${USER}
+WORKDIR ${HOME}
+COPY --chown=${USER}:${USER} ./config/camera_calibration.sh /usr/local/bin/camera_calibration
+
+RUN mkdir -p ${ROS2_WORKSPACE}/src
+WORKDIR ${ROS2_WORKSPACE}/srcf
+RUN sudo rosdep init
+RUN rosdep update
+RUN /bin/bash -c "source /opt/ros/${ROS_DISTRO}/setup.bash; colcon build --symlink-install"
+
+RUN echo "source /opt/ros/${ROS_DISTRO}/setup.bash; \
+    source ${ROS2_WORKSPACE}/install/setup.bash" >> ${HOME}/.bashrc
+RUN echo "export RCUTILS_COLORIZED_OUTPUT=1" >> ${HOME}/.bashrc
+
+# clone sparse camera_calibration
 RUN git clone --filter=blob:none --no-checkout -b jazzy https://github.com/ros-perception/image_pipeline.git && \
     cd image_pipeline && \
     git sparse-checkout init --no-cone && \
@@ -46,35 +66,35 @@ RUN git clone --filter=blob:none --no-checkout -b jazzy https://github.com/ros-p
     git checkout && mv camera_calibration .. && cd .. && rm -rf image_pipeline && \
     find ./camera_calibration/src/camera_calibration/calibrator.py -type f -exec sed -i 's|/tmp/calibrationdata.tar.gz|/export/calibrationdata.tar.gz|g' {} \;
 
-RUN mkdir /export
-
 WORKDIR ${ROS2_WORKSPACE}
 RUN /bin/bash -c "source /opt/ros/${ROS_DISTRO}/setup.bash; colcon build"
 RUN rm -rf ./src
 
+RUN sudo mkdir /export && sudo chown ${USER}:${USER} /export
+
 FROM environment-variables AS final
 COPY --from=base-dependencies / /
-RUN rm -rf /home/ubuntu
 
 # start as ROS user
+USER ${USER}
 WORKDIR ${ROS2_WORKSPACE}
 
 RUN echo '#!/bin/bash\n\
     set -e\n\
-    source /opt/ros/jazzy/setup.bash\n\
-    source /ws/install/setup.bash\n\
-    exec "$@"' > /ros_entrypoint.sh &&  chmod +x /ros_entrypoint.sh
+    source /opt/ros/${ROS_DISTRO}/setup.bash\n\
+    source ${ROS2_WORKSPACE}/install/setup.bash\n\
+    exec "$@"' > ${HOME}/ros_entrypoint.sh && chmod +x ${HOME}/ros_entrypoint.sh
 
-ENTRYPOINT ["/ros_entrypoint.sh"]
+ENTRYPOINT ["/home/ros2/ros_entrypoint.sh"]
 CMD ["/usr/local/bin/camera_calibration"]
 
 # Metadata
-ARG BASE_IMAGE=docker.io/library/ros
-ARG BASE_TAG=jazzy
-ARG VERSION=v0.0.0
+ARG BASE_IMAGE
+ARG BASE_TAG
+ARG VERSION
 LABEL org.opencontainers.image.title="AICA camera calibration"
 LABEL org.opencontainers.image.description="AICA base camera calibration"
 LABEL org.opencontainers.image.version="${VERSION}"
 LABEL org.opencontainers.image.base.name="${BASE_IMAGE}:${BASE_TAG}"
-LABEL tech.aica.image.metadata='{"type":"base/ws","base":{"name":"'${BASE_IMAGE}':'${BASE_TAG}'","version":"'${VERSION}'"}}'
+LABEL tech.aica.image.metadata='{"type":"base/camera-calibration","base":{"name":"'${BASE_IMAGE}':'${BASE_TAG}'","version":"'${VERSION}'"}}'
 LABEL devcontainer.metadata='[{"containerUser": "ros2"}]'
