fix: uncomment line

--- a/ros2_ws/Dockerfile.nvidia
+++ b/ros2_ws/Dockerfile.nvidia
@@ -211,7 +211,7 @@ WORKDIR ${ROS2_WORKSPACE}/src
 
 WORKDIR ${ROS2_WORKSPACE}
 RUN /bin/bash -c "source /opt/ros/${ROS_DISTRO}/setup.bash; colcon build"
-# RUN rm -rf ./src
+RUN rm -rf ./src
 
 FROM base-workspace AS ros2-control-iron
 
